--- a/config/database.yml
+++ b/config/database.yml
@@ -1,5 +1,12 @@
-development:
+default: &default
   adapter: postgresql
+  encoding: unicode
+  # For details on connection pooling, see rails configuration guide
+  # http://guides.rubyonrails.org/configuring.html#database-pooling
+  pool: 5
+
+development:
+   <<: *default
   host: localhost
   username: postgres
   database: yatoto_jobs_development
